# omni-computer-use

./: .gitignore  .mcpbignore  LICENSE  README.md  SPEC.md  glama.json  manifest.json  pyproject.toml  server.json
src/computer_use_omni/: __init__.py  __main__.py  apps.py  batch.py  config.py  inputs.py  keyboard.py  logsetup.py  overlay.py  permissions.py  server.py  terminal.py
src/omni_computer_use/: __init__.py  __main__.py  batch.py  clipboard.py  config.py  inputs.py  keyboard.py  keymap.py  logsetup.py  overlay.py  permissions.py  screen.py  server.py  terminal.py
tests/: drive.py  drive_timed.py  mcp_client.py  scen_calc.json  scen_cap.json  scen_clip.json  scen_hold.json  scen_logtest.json  scen_notepad.json  scen_np1.json  scen_paint.json  scen_paint_draw.json  scen_paint_draw2.json  scen_phase3.json  scen_reload.json  scen_shot.json  scen_sweep.json  scen_type.json  scen_uwp.json  test_launch.py  test_selfheal.py
