[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-computer-use-mcp"
version = "1.0.1"
description = "Windows computer-use MCP for the Claude Code CLI — a 1:1 replica of Claude Desktop's computer-use tool surface."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jason26214" }]
keywords = ["mcp", "computer-use", "windows", "automation", "claude", "desktop"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Desktop Environment",
]
dependencies = [
    "mcp",
    "mss",
    "pillow",
    "pywin32",
]

[project.urls]
Homepage = "https://github.com/Jason26214/omni-computer-use"
Repository = "https://github.com/Jason26214/omni-computer-use"
Issues = "https://github.com/Jason26214/omni-computer-use/issues"

[project.scripts]
omni-computer-use = "omni_computer_use.__main__:main"
omni-computer-use-mcp = "omni_computer_use.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omni_computer_use"]

[tool.hatch.build.targets.sdist]
# Keep the PyPI tarball lean: the README demo GIF (a few MB) is a GitHub-only
# asset, not needed to build or run the package. It stays in the repo.
exclude = ["docs"]
